[metadata]
name = mzm-model_s245301
version = 0.0.1
author = Rocco D'Ingillo
author_email = s245301@studenti.polito.it
description = A package for IQ MZM functions
long_description = file: README.md
long_description_content_type = text/markdown
url = [metadata]name = package_template_YOUR-USERNAME-HERE
version = 0.0.1
author = Name Surname
author_email = author@example.com
description = A package template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://optcomgit.polito.it/d060491/optical-wideband-iq-modulator
project_urls =
Bug Tracker = https://optcomgit.polito.it/d060491/optical-wideband-iq-modulator
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent[options]
package_dir = mzm_model

packages = find:
python_requires = >=3.6
install_requires =
   numpy
